--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import "./css/layout/layout.css";
+
+/* Default styles to be moved later  */
+p {@apply text-base text-black block}
