--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,8 +1,13 @@
+/* Tailwind  */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+/* Fonts  */
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Noto+Serif:wght@300&display=swap');
+
+/* Styleguide layout  */
 @import "./css/layout/layout.css";
 
 /* Default styles to be moved later  */
-p {@apply text-base text-black block}
+p {@apply text-base block font-serif}
