--- a/src/css/layout/layout.css
+++ b/src/css/layout/layout.css
@@ -1,5 +1,8 @@
 .flex-container-parent {@apply flex  flex-col h-screen}
 .flex-container-content {@apply flex grow}
 .flex-container-content .sidebar {@apply flex h-full w-1/4 p-4}
+.flex-container-content .sidebar ul > li {@apply text-base font-serif mt-1 }
+.flex-container-content .sidebar ul > li > ul > li {@apply text-xs font-mono pl-2}
+.flex-container-content .sidebar ul > li > ul > li a {@apply text-primary }
 .flex-container-content .main {@apply grow}
 .flex-container-footer {@apply flex}
