forms starting point

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -6,12 +6,28 @@
 /* Fonts -> DM Mono, DM Sans, Noto Serif  */
 @import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Noto+Serif:wght@300&display=swap');
 
-/* Styleguide layout and styles  */
+/* Styleguide layout and styles to be organized */
 .guide-heading { @apply text-base text-primary mt-10 font-mono}
 hr { @apply h-px my-3 bg-grey-300 border-0}
 @import "./css/layout/layout.css";
- 
+
+
+
+
 /* Component CSS to be organized */
+/* Forms */
+.label {@apply block }
+.input {@apply block border border-grey-300 rounded-xl}
+
+
+
+
+
+
+
+
+
+
 /* Type */
 /* Display Text */
 .display-lg {@apply lg:text-8xl md:text-6xl sm:text-4xl}
