--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -3,8 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Fonts -> DM Mono, DM Sans, Noto Serif  */
-@import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Noto+Serif:wght@300&display=swap');
+/* Fonts -> DM Mono, DM Sans, Merriweather Serif  */
+@import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Merriweather:wght@300&display=swap');
 
 /* Styleguide layout and styles to be organized */
 .guide-heading { @apply text-base text-primary mt-10 font-mono}
