--- a/src/css/layout/layout.css
+++ b/src/css/layout/layout.css
@@ -1,25 +1,55 @@
 /* style guide  layout, Layout.js */
-.flex-container-parent {@apply flex  flex-col h-screen}
-.flex-container-content {@apply flex grow justify-start }
+.flex-container-parent {
+  @apply flex  flex-col h-screen;
+}
+.flex-container-content {
+  @apply flex grow justify-start;
+}
 
-.flex-container-content .sidebar {@apply flex flex-col h-full p-4 w-64 sm:hidden md:flex}
+.flex-container-content .sidebar {
+  @apply flex flex-col h-full p-4 w-64 sm:hidden md:flex;
+}
 
-.flex-container-content .sidebar .logo {@apply flex w-full justify-between items-center pt-[76px]}
-.flex-container-content .sidebar .logo img{ @apply w-20 h-full}
+.flex-container-content .sidebar .logo {
+  @apply flex w-full justify-between items-center pt-[76px];
+}
+.flex-container-content .sidebar .logo img {
+  @apply w-20 h-full;
+}
 
-.flex-container-content .sidebar nav { @apply w-auto h-full pt-4}
-.flex-container-content .sidebar ul > li {@apply text-sm font-serif mt-3 }
-.flex-container-content .sidebar ul > li > ul > li {@apply text-xs font-mono pl-2 mt-1}
-.flex-container-content .sidebar ul > li > ul > li a {@apply text-primary }
+.flex-container-content .sidebar nav {
+  @apply w-auto h-full pt-4;
+}
+.flex-container-content .sidebar ul > li {
+  @apply text-sm font-serif mt-3;
+}
+.flex-container-content .sidebar ul > li > ul > li {
+  @apply text-xs font-mono pl-2 mt-1;
+}
+.flex-container-content .sidebar ul > li > ul > li a {
+  @apply text-primary;
+}
 
-.flex-container-content .main {@apply grow w-full}
-.flex-container-footer {@apply flex}
+.flex-container-content .main {
+  @apply grow w-full;
+}
+.flex-container-footer {
+  @apply flex;
+}
 
 /* style guide custom properties */
 /* Type */
-.guide-heading { @apply text-base text-primary mt-10 pl-3 font-mono}
-.guide-section {@apply p-3 pt-1}
-.guide-section-heading {@apply text-base text-primary mt-10 font-mono}
+.guide-heading {
+  @apply text-base text-primary mt-10 pl-3 font-mono;
+}
+.guide-section {
+  @apply p-3 pt-1;
+}
+.guide-section-heading {
+  @apply text-base text-primary mt-10 font-mono;
+}
 
 /* Misc */
-hr { @apply h-px my-3 bg-grey-300 border-0}
+hr {
+  @apply h-px my-3 bg-grey-300 border-0;
+}
