--- a/src/css/components/forms.css
+++ b/src/css/components/forms.css
@@ -1,3 +1,3 @@
 /* Forms */
-.label {@apply block }
-.input {@apply block border border-grey-300 rounded-md}
+.label { @apply block }
+.input { @apply block border border-grey-300 rounded-md bg-amber-300}
